--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     Estreno
                   </div>
                   <div class="Baby Driver">
-                   Baby Drive
+                   Baby Driver
                   </div>
                 </div>
               </div>
@@ -151,10 +151,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Movie
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Deadpool
                   </div>
                 </div>
               </div>
@@ -166,10 +166,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Terror
                   </div>
                   <div class="project-name">
-                    Project Name
+                    IT
                   </div>
                 </div>
               </div>
@@ -181,10 +181,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Clasificacion R
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Logan
                   </div>
                 </div>
               </div>
@@ -196,10 +196,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Ganadora del Oscar
                   </div>
                   <div class="project-name">
-                    Project Name
+                    La forma del agua
                   </div>
                 </div>
               </div>
@@ -211,10 +211,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Clasificacion C
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Fifty Shades
                   </div>
                 </div>
               </div>
@@ -226,8 +226,8 @@
 
     <section class="bg-dark text-white">
       <div class="container text-center">
-        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
+        <h2 class="mb-4">Descarga Nuestra App Para Android y Ios</h2>
+        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Descarga aqui</a>
       </div>
     </section>
 
@@ -235,20 +235,20 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Let's Get In Touch!</h2>
+            <h2 class="section-heading">CINEKIRA</h2>
             <hr class="my-4">
-            <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+            <p class="mb-5">Mejoramos día a día, para brindarte un servicio de calidad, con nuestro prorama de invitado podras gozar de incontables veneficios, VEN Y DISFRUTA.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>123-456-6789</p>
+            <p>(55)18-63-84-49</p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
+              <a href="mailto:your-email@your-domain.com">contactocinekira@cinekira.com</a>
             </p>
           </div>
         </div>
