--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
     </nav>
 
-    <header class="masthead text-center text-black d-flex">
+    <header class="masthead text-center text-yellow d-flex">
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-10 mx-auto">
@@ -138,7 +138,7 @@
                   <div class="project-category text-faded">
                     Estreno
                   </div>
-                  <div class="Baby Driver">
+                  <div class="project-category text-faded">
                    Baby Driver
                   </div>
                 </div>
